# openlase-win

./: .gitignore  CMakeLists.txt  Makefile  README-Development.md  README-Linux.md  README-MinGW.md  README-NetJack.md  README-QuickStart.md  README-Windows.md  README-windows.md  README.md  common.mk  cpack-wix-patch.xml  dir-locals.el  env.ps1  openlase-dev.cmd  openlase-dev.cmd.in  openlase-dev.sh  openlase.cmd  openlase.sh  requirements.txt  vcpkg.json
Modules/: FindFFmpeg.cmake  FindJACK.cmake  FindSwresample.cmake  FindSwscale.cmake
common/: mingw_unbuffered.c  ol_compat.h
config/: default.sample.cfg  openlase-ab-matrix.xml  openlase-laserdock.xml  openlase-netjack.xml  openlase-no-ab-matrix.xml  openlase-two-simulators.xml
examples/: CMakeLists.txt  circle.py  circlescope.c  harp.c  harp.py  harp2.py  kinect_shadows.py  midiview.c  multihead.c  pixiv_config.py  pong.c  rect.py  scope.c  showtext.py  simple.c  simple.py  tweet.py  ugoira_player.py  ugoira_player2.py  webcam_shadows.py
examples/27c3_slides/: 3ddemos.c  CMakeLists.txt  avstream.c  avstream.h  circlescope.c  main.c  metaballs.c  pong.c  static.c  video.c
examples/lase_demo/: CMakeLists.txt  demo.c  trace.c
include/: CMakeLists.txt  ilda.h  libol.h  libol_common.h  text.h  trace.h
libol/: CMakeLists.txt  align.h  genfont.py  ilda.c  imgproc_sse2.asm  libol.c  text.c  trace.c  x86inc.asm
libol/include/libol/: ilda.h  libol.h  libol_common.h.UNUSED  libol_compat.h  libol_config.h.in  text.h  trace.h
libol/packaging/: CMakeLists.txt  Config.cmake.in
libol/tests/: CMakeLists.txt  Makefile  README.md
libol/tests/integration/: CMakeLists.txt  main.cpp
output/: CMakeLists.txt  output.cpp  output_settings.cpp
packaging/: CMakeLists.txt  OpenLaseConfig.cmake.in
pyplaycap/: pyplaycap.py
python/: CMakeLists.txt  pylase.pyx  pyproject.toml  python_no_debug.h  setup.py  svg.py
python/pylase/: __init__.py  _find_jack_library.py  _load_pylase.py  _pylase.pyx  jack_ab_mixer.py  logging_utils.py  oldownload.py  svg2ild.py
python/pylase/burn_mouse/: __main__.py  jack_laser_client.py  path_builder.py
python/pylase/pyplayvid/: __init__.py  __main__.py  audio.py  cli.py  gui.py  gui_simple.py  gui_types.py  media.py  player.py  render.py  settings.py  state.py  utils.py
scripts/unix/: functions.sh  openlaserc.sh
scripts/win/: common.ahk  create-shortcut.ps1  functions.ahk  functions.psm1  install-pixiv-util.ps1  ol_paths.psm1  ol_utils.psm1  openlase_rc.ps1  register-startmenu.cmd  register-startmenu.ps1  run-output.ahk  run-qjackctl.ahk  run-simulator.ahk  test_minimize.ahk
tools/: CMakeLists.txt  cal.c  genfont.py  invert.c  oldownload  oldownload.cmd  oldownload.ps1  oldownload.py  playilda.c  playvid.c  playvid2.c  playvid2.h  showsvg.py  simulator.c
tools/qplayvid/: CMakeLists.txt  qplayvid.c  qplayvid.h  qplayvid_gui.cpp  qplayvid_gui.h
